@@ -8,12 +8,12 @@ if USE_NETWORK
 NETWORK_SRCS = ipx_mcast4.c ipx_win.c ipx_udp.c winnet.c
 endif
 
-libarch_win32_a_SOURCES = ${NETWORK_SRCS} findfile.c mingw_init.c
+libarch_win32_a_SOURCES = ${NETWORK_SRCS} findfile.c hmpfile.c midi.c mingw_init.c
 
 EXTRA_libarch_win32_a_SOURCES = ipx_mcast4.c ipx_win.c ipx_udp.c winnet.c
 
 EXTRA_DIST = ${EXTRA_SUBDIRS} \
 d1x.ico d1x.rc d3d.ico debug.cpp descent.ico digi.c findfile.c glinit.c gr.c \
-hmpfile.c init.c joydefs.c joyhh.c key.c mono.c mouse.c palw32.c \
+init.c joydefs.c joyhh.c key.c mono.c mouse.c palw32.c \
 pch.cpp scene.cpp serial.c texture.cpp timer.c win32.c winmain.cpp \
 ipx_drv.h
